--- a/Android/local.properties
+++ b/Android/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 04 18:56:33 BRT 2019
-ndk.dir=C\:\\Users\\rob_l\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\rob_l\\AppData\\Local\\Android\\Sdk
+#Mon Mar 04 19:01:46 BRT 2019
+sdk.dir=C\:\\Users\\alexa\\AppData\\Local\\Android\\Sdk
