--- a/Android/local.properties
+++ b/Android/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Mar 31 15:40:38 BRT 2019
-sdk.dir=C\:\\Users\\alexa\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Nuala Morita\\AppData\\Local\\Android\\Sdk
