--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -16,10 +16,8 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name=".RecuperarSenhaActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".TelaCadUsuarioActivity" />
-        <activity
-            android:name=".TelaInicio"
-            android:label="@string/title_activity_tela_inicio" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
