--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.3.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.scaledrone:scaledrone-java:0.6.0'
 }
